[gd_scene load_steps=22 format=1]

[ext_resource path="res://fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/CharacterEditScreen.gd" type="Script" id=2]
[ext_resource path="res://images/GUI/startscreen.png" type="Texture" id=3]
[ext_resource path="res://images/GUI/buttonUp.png" type="Texture" id=4]
[ext_resource path="res://images/GUI/buttonDown.png" type="Texture" id=5]
[ext_resource path="res://images/GUI/grabberUp.png" type="Texture" id=6]
[ext_resource path="res://images/GUI/slider.png" type="Texture" id=7]
[ext_resource path="res://images/GUI/borderCenter.png" type="Texture" id=8]
[ext_resource path="res://images/GUI/buttonOver.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = 8.0
content_margin/right = 8.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = 8.0
content_margin/right = 8.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 9 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[node name="CharacterEditScreen" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 490.0
margin/bottom = 600.0
custom_styles/panel = SubResource( 3 )

[node name="TabContainer" type="TabContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 30.0
margin/right = 460.0
margin/bottom = 490.0
custom_styles/tab_fg = SubResource( 4 )
custom_styles/tab_bg = SubResource( 5 )
custom_styles/panel = SubResource( 6 )
custom_colors/font_color_bg = Color( 0, 0, 0, 1 )
custom_colors/font_color_fg = Color( 0, 0, 0, 1 )
tab_align = 1
tabs_visible = true

[node name="Body" type="Control" parent="Panel/TabContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 0.0
margin/bottom = 0.0

[node name="SizeLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 317.0
margin/right = 84.0
margin/bottom = 342.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Size"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Size" type="HSlider" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 96.0
margin/top = 317.0
margin/right = 406.0
margin/bottom = 341.0
custom_icons/grabber_hilite = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 7 )
range/min = 0.25
range/max = 1.5
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="SizeDisplay" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 216.0
margin/top = 357.0
margin/right = 276.0
margin/bottom = 382.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TuftsLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 267.0
margin/right = 84.0
margin/bottom = 292.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tufts"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tufts" type="OptionButton" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 267.0
margin/right = 406.0
margin/bottom = 298.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="WingsLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 217.0
margin/right = 84.0
margin/bottom = 242.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Wings"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Wings" type="OptionButton" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 217.0
margin/right = 406.0
margin/bottom = 248.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="TailLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 167.0
margin/right = 78.0
margin/bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tail"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tail" type="OptionButton" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 167.0
margin/right = 406.0
margin/bottom = 198.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="ManeLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 117.0
margin/right = 78.0
margin/bottom = 142.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mane"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Mane" type="OptionButton" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 117.0
margin/right = 406.0
margin/bottom = 148.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="HeadLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 67.0
margin/right = 74.0
margin/bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Head"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Head" type="OptionButton" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 67.0
margin/right = 406.0
margin/bottom = 98.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="BodyLabel" type="Label" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 17.0
margin/right = 74.0
margin/bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Body"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Body" type="OptionButton" parent="Panel/TabContainer/Body"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 17.0
margin/right = 406.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Markings" type="Control" parent="Panel/TabContainer"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0

[node name="TailMarkingsLabel" type="Label" parent="Panel/TabContainer/Markings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 117.0
margin/right = 78.0
margin/bottom = 142.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tail"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TailMarkings" type="OptionButton" parent="Panel/TabContainer/Markings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 117.0
margin/right = 406.0
margin/bottom = 148.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="HeadMarkingsLabel" type="Label" parent="Panel/TabContainer/Markings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 67.0
margin/right = 74.0
margin/bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Head"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HeadMarkings" type="OptionButton" parent="Panel/TabContainer/Markings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 67.0
margin/right = 406.0
margin/bottom = 98.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="BodyMarkingsLabel" type="Label" parent="Panel/TabContainer/Markings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 17.0
margin/right = 74.0
margin/bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Body"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BodyMarkings" type="OptionButton" parent="Panel/TabContainer/Markings"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 17.0
margin/right = 406.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="Colors" type="Control" parent="Panel/TabContainer"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0

[node name="RedLabel" type="Label" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 67.0
margin/right = 59.0
margin/bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Red"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Red" type="HSlider" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 96.0
margin/top = 67.0
margin/right = 416.0
margin/bottom = 91.0
custom_icons/grabber_hilite = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 7 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="GreenLabel" type="Label" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 117.0
margin/right = 83.0
margin/bottom = 142.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Green"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Green" type="HSlider" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 96.0
margin/top = 117.0
margin/right = 416.0
margin/bottom = 141.0
custom_icons/grabber_hilite = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 7 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="BlueLabel" type="Label" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 167.0
margin/right = 83.0
margin/bottom = 192.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Blue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Blue" type="HSlider" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 96.0
margin/top = 167.0
margin/right = 416.0
margin/bottom = 191.0
custom_icons/grabber_hilite = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 7 )
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="RGBLabel" type="Label" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 217.0
margin/right = 83.0
margin/bottom = 242.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RGB"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ColorType" type="OptionButton" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 17.0
margin/right = 416.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="RGBDisplay" type="LineEdit" parent="Panel/TabContainer/Colors"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 96.0
margin/top = 217.0
margin/right = 226.0
margin/bottom = 242.0
custom_styles/read_only = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "0,0,0,1"
placeholder/alpha = 0.6
editable = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Save" type="Control" parent="Panel/TabContainer"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 14.0
margin/right = 0.0
margin/bottom = 0.0

[node name="NameLabel" type="Label" parent="Panel/TabContainer/Save"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 17.0
margin/right = 56.0
margin/bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name" type="LineEdit" parent="Panel/TabContainer/Save"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 17.0
margin/right = 406.0
margin/bottom = 42.0
custom_styles/normal = SubResource( 8 )
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="SaveButton" type="Button" parent="Panel/TabContainer/Save"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 77.0
margin/right = 326.0
margin/bottom = 117.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="DeleteButton" type="Button" parent="Panel/TabContainer/Save"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 106.0
margin/top = 137.0
margin/right = 326.0
margin/bottom = 177.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete"
flat = false

[node name="BackButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 130.0
margin/top = 520.0
margin/right = 350.0
margin/bottom = 560.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="value_changed" from="Panel/TabContainer/Body/Size" to="." method="_on_Size_value_changed"]

[connection signal="item_selected" from="Panel/TabContainer/Body/Tufts" to="." method="_on_Tufts_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Body/Wings" to="." method="_on_Wings_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Body/Tail" to="." method="_on_Tail_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Body/Mane" to="." method="_on_Mane_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Body/Head" to="." method="_on_Head_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Body/Body" to="." method="_on_Body_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Markings/TailMarkings" to="." method="_on_TailMarkings_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Markings/HeadMarkings" to="." method="_on_HeadMarkings_item_selected"]

[connection signal="item_selected" from="Panel/TabContainer/Markings/BodyMarkings" to="." method="_on_BodyMarkings_item_selected"]

[connection signal="value_changed" from="Panel/TabContainer/Colors/Red" to="." method="_on_color_changed"]

[connection signal="value_changed" from="Panel/TabContainer/Colors/Green" to="." method="_on_color_changed"]

[connection signal="value_changed" from="Panel/TabContainer/Colors/Blue" to="." method="_on_color_changed"]

[connection signal="pressed" from="Panel/TabContainer/Save/SaveButton" to="." method="_on_SaveButton_pressed"]

[connection signal="pressed" from="Panel/TabContainer/Save/DeleteButton" to="." method="_on_DeleteButton_pressed"]

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_BackButton_pressed"]


